syntax = "proto3";

package pb;

option go_package = "github.com/Kazbekuly/grpc-crud/proto";
import "post.proto";
import "prc_create_post.proto";
import "rpc_update_post.proto";

service PostService{
  rpc CreatePost(CreatePostRequest) returns (PostResponse){}
  rpc GetPost(PostRequest) returns (PostResponse){}
  rpc GetPosts(GetPostRequest) returns (stream Post){}
  rpc UpdatePost(UpdatePostRequest) returns (PostResponse){}
  rpc DeletePost(PostRequest) returns (DeletePostResponse){}
}

message GetPostRequest{
  optional int64 page = 1;
  optional int64 limit = 2;
}

message PostRequest {string id = 1;}

message DeletePostResponse {bool success = 1;}

