syntax = "proto3";

package pb;

option go_package = "github.com/Kazbekuly/grpc-crud/proto/pb";

message CreatePostRequest {
  string Title = 1;
  string Text = 2;
  string Image = 3;
  string User = 4;
}